# frontier-node-template-latest

./: README.md
node/: Cargo.toml
